<?xml version="1.0"?>
<package format="3">
  <name>ros2_publisher</name>
  <version>0.0.0</version>
  <description>SVO publisher package</description>
  <maintainer email="amir.shabo.749@my.csun.edu">amir</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>
